Increase the width of the fixed sidebar from 1px to 4px for improved visibility.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -437,7 +437,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 1px;
+  width: 4px;
   height: 100vh;
   z-index: 3100;
   background-color: transparent;
